# synth

./: .gitignore  .python-version  LICENSE  README.md  abstraction_demo.py  benchmark.py  bool-3vars-2iters.json  bool-3vars-3iters.json  boolfunc.py  bv4-3vars-2iters.json  bv4-3vars-3iters.json  cegis.py  chip_inventory.txt  chips.py  cvc_runall.sh  d.py  demo.py  eval.py  example.py  from_sygus_spec_hackdel.py  from_sygus_spec_hackdel_32bit.py  hackdel.py  hackdel_sygus_spec.py  hand_downscaled_abstraction.py  hand_interval_abstraction.py  hand_interval_abstraction_2.py  hand_interval_abstraction_3.py  oplib.py  pyproject.toml  rec_demo.py  rec_demo_op.py  rec_demo_rec_in.py  requirements.txt  rewriter.py  rule_exists.txt  rule_gen.py  rule_gen2.py  rule_gen_blind.py  rule_gen_smart.py  rules.txt  (+27 more)
bench/: base.py  bench.py  cvc4_bool.py  cvc4_bv.py  cvc4_bv32.py  cvc4_bv4.py  from_sygus_spec_hackdel_32bit.py  hackdel.py  hackdel_heavy.py  hackdel_light.py  hackdel_sygus.py  hackdel_sygus_own_spec.py  hackdel_sygus_spec.py  herbie.py  random.py  ruler_bool.py  ruler_bv.py  ruler_bv32.py  ruler_bv4.py  rulesynth.py  util.py
bitvec_benchmarks/: from_sygus_spec_hackdel.py  from_sygus_spec_hackdel_32bit.py  from_sygus_spec_hackdel_64bit.py  hackdel.py  hackdel_sygus_spec.py
eval/: experiments.py  util.py
logs/: irreducible.txt  rule_exists.txt  rules.txt
pla/: add.pla  const.pla  dontcare.pla  mux.pla  overflow.pla
synth/: __init__.py  abstraction.py  base_synths.py  boolfunc.py  brahma.py  cegis.py  downscaling.py  objective.py  oplib.py  optimizers.py  solvers.py  (+9 more)
(+1678 files in other folders)
